--- a/careCircleFrontend/index.html
+++ b/careCircleFrontend/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>babysitting-app</title>
+    <title>CareCircle Pro</title>
+    <script>
+      // Polyfill for sockjs-client which expects 'global'
+      window.global = window;
+    </script>
   </head>
   <body>
     <div id="root"></div>
